cicd/DocumentManagementDeploymentBlue.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: dndn-document-management-blue
  labels:
    app: dndn-document-management
    type: document-management
    version: blue
spec:
  replicas: 0
  selector:
    matchLabels:
      app: dndn-document-management
      type: document-management
      version: blue
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 0
  template:
    metadata:
      labels:
        app: dndn-document-management
        type: document-management
        version: blue
    spec:
      containers:
        - name: document-management
          image: seungwoo0128/dndn-document-management:latest
          imagePullPolicy: Always
          ports:
            - containerPort: 8082
          startupProbe:
            httpGet:
              path: /actuator/health/liveness
              port: 8082
            periodSeconds: 10
            failureThreshold: 30
            timeoutSeconds: 3
          readinessProbe:
            httpGet:
              path: /actuator/health/readiness
              port: 8082
            periodSeconds: 5
            timeoutSeconds: 3
            failureThreshold: 3
          livenessProbe:
            httpGet:
              path: /actuator/health/liveness
              port: 8082
            initialDelaySeconds: 0
            periodSeconds: 10
            timeoutSeconds: 3
            failureThreshold: 3
          resources:
            requests:
              cpu: "100m"
              memory: "128Mi"
            limits:
              cpu: "1000m"
              memory: "2048Mi"
