cicd/GatewayDeploymentBlue.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: dndn-gateway-blue
  labels:
    app: dndn-gateway
    type: gateway
    version: blue
spec:
  replicas: 0
  selector:
    matchLabels:
      app: dndn-gateway
      type: gateway
      version: blue
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 0
  template:
    metadata:
      labels:
        app: dndn-gateway
        type: gateway
        version: blue
    spec:
      containers:
        - name: gateway
          image: seungwoo0128/dndn-gateway:latest
          imagePullPolicy: Always
          ports:
            - containerPort: 8088
          startupProbe:
            httpGet:
              path: /actuator/health/liveness
              port: 8088
            periodSeconds: 10
            failureThreshold: 30
            timeoutSeconds: 3
          readinessProbe:
            httpGet:
              path: /actuator/health/readiness
              port: 8088
            periodSeconds: 5
            timeoutSeconds: 3
            failureThreshold: 3
          livenessProbe:
            httpGet:
              path: /actuator/health/liveness
              port: 8088
            initialDelaySeconds: 0
            periodSeconds: 10
            timeoutSeconds: 3
            failureThreshold: 3
          resources:
            requests:
              cpu: "100m"
              memory: "128Mi"
            limits:
              cpu: "1000m"
              memory: "1024Mi"
