cicd/BackendService.yaml
apiVersion: v1
kind: Service
metadata:
  name: backend-service
  namespace: default
spec:
  type: ClusterIP
  selector:
    type: backend
    version: green
  ports:
    - port: 8080
      targetPort: 8080
