cicd/DiscoveryService.yaml
apiVersion: v1
kind: Service
metadata:
  name: discovery-service
spec:
  type: ClusterIP
  selector:
    app: dndn-discovery
    type: discovery
  ports:
    - port: 8761
      targetPort: 8761
