cicd/DocumentManagementService.yaml
apiVersion: v1
kind: Service
metadata:
  name: document-management-service
spec:
  type: ClusterIP
  selector:
    app: dndn-document-management
    type: document-management
  ports:
    - port: 8082
      targetPort: 8082
