cicd/GatewayService.yaml
apiVersion: v1
kind: Service
metadata:
  name: gateway-service
spec:
  type: ClusterIP
  selector:
    app: dndn-gateway
    type: gateway
    version: green
  ports:
    - port: 8088
      targetPort: 8088
